--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">My skill</h3>
 
           <ul class="service-list">
 
@@ -244,7 +244,7 @@
                 <h4 class="h4 service-item-title">Web design</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  A basic design for websites .
                 </p>
               </div>
 
@@ -260,7 +260,7 @@
                 <h4 class="h4 service-item-title">Web development</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Development of sites at the starter level.
                 </p>
               </div>
 
@@ -273,16 +273,16 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Technical skill</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Also got a lot knowledge in hardware computer,fixable or problemsolving.
                 </p>
               </div>
 
             </li>
 
-            <li class="service-item">
+            <!-- <li class="service-item">
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
@@ -296,7 +296,7 @@
                 </p>
               </div>
 
-            </li>
+            </li> -->
 
           </ul>
 
@@ -350,14 +350,14 @@
                     lot of experience
                     and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.   
                   </p>
                 </div>
 
               </div>
             </li>
 
-            <li class="testimonials-item">
+            <!-- <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
@@ -377,9 +377,9 @@
                 </div>
 
               </div>
-            </li>
+            </li> -->
 
-            <li class="testimonials-item">
+            <!-- <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
@@ -399,7 +399,7 @@
                 </div>
 
               </div>
-            </li>
+            </li> -->
 
           </ul>
 
@@ -457,7 +457,7 @@
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">Clients</h3>
+          <h3 class="h3 clients-title">My Web & Program Langauges</h3>
 
           <ul class="clients-list has-scrollbar">
 
