--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@
                 " alt="design icon" width="40">
               </div>
 
-              <div class="service-content-box">
+              <div class="service-content-box">                 
                 <h4 class="h4 service-item-title">Web design</h4>
 
                 <p class="service-item-text">
-                  A basic design for websites .
+                  A basic design for websites.
                 </p>
               </div>
 
@@ -463,37 +463,43 @@
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-1-color.png" alt="client logo">
+                <img src="./assets/images/web_lang/html-5.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-2-color.png" alt="client logo">
+                <img src="./assets/images/web_lang/css-3.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-3-color.png" alt="client logo">
+                <img src="./assets/images/web_lang/js.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-4-color.png" alt="client logo">
+                <img src="./assets/images/web_lang/mysql.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-5-color.png" alt="client logo">
+                <img src="./assets/images/web_lang/php.png" alt="client logo">
               </a>
             </li>
 
             <li class="clients-item">
               <a href="#">
-                <img src="./assets/images/logo-6-color.png" alt="client logo">
+                <img src="./assets/images/web_lang/python.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/web_lang/Rlogo.svg" alt="client logo">
               </a>
             </li>
 
@@ -501,6 +507,88 @@
 
         </section>
 
+        <section class="clients">
+
+          <h3 class="h3 clients-title">My Tools</h3>
+
+          <ul class="clients-list has-scrollbar">
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/Tools/Visual_Studio_Code_1.35_icon.svg.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/Tools/figma.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/Tools/wordpress.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/Tools/dreamweaver.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/Tools/wix2.jpg" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/Tools/appsheet.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/Tools/Canva_icon_2021.svg.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/Tools/microsoft office.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/Tools/glide-New-Logo.png" alt="client logo">
+              </a>
+            </li>
+            
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/Tools/IBM SPSS Statistics.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/Tools/PyCharm_Icon.svg.png" alt="client logo">
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#">
+                <img src="./assets/images/Tools/pngwing.com.png" alt="client logo">
+              </a>
+            </li>
+
+            
+          </ul>
+
+        </section>
       </article>
 
 
