--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
           - testimonials modal
         -->
 
-        <div class="modal-container" data-modal-container>
+        <div class="modal-container default" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
