--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
           - clients
         -->
 
-        <section class="clients">
+        <section class="clients default">
 
           <h3 class="h3 clients-title">My Web & Program Langauges</h3>
 
