--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">Tor</h1>
           <h2 class="fullname" title="Richard hanrick">Panawat   Jaroenkhet</h2>
-          <p class="title">Web developer</p>
+          <p class="title" style="color: rgb(255, 255, 255) !important;">Web developer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -129,19 +129,19 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.facebook.com/tortor1011/" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+            <a href="https://github.com/tortor1011" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/jan_t0r/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -190,10 +190,10 @@
             <button class="navbar-link" data-nav-link>Contact</button>
           </li>
           
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <i class="fa fa-toggle-off switch-off" style="font-size:36px;color:rgb(255, 255, 255)"></i>
             <i class="fa fa-toggle-on switch-on" style="font-size:36px;color:rgb(255, 255, 255)"></i>
-          </li>
+          </li> -->
 
         </ul>
 
@@ -242,12 +242,11 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
+                <img src="./assets/images/icon-design.svg " style="filter: brightness(0) saturate(100%) invert(16%) sepia(88%) saturate(3662%) hue-rotate(296deg) brightness(88%) contrast(98%);" alt="design icon" width="40">
               </div>
 
               <div class="service-content-box">                 
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title" style="color: rgb(0, 0, 0) !important;">Web design</h4>
 
                 <p class="service-item-text">
                   A basic design for websites.
@@ -259,11 +258,11 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-dev.svg" style="filter: brightness(0) saturate(100%) invert(16%) sepia(88%) saturate(3662%) hue-rotate(296deg) brightness(88%) contrast(98%);"alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title" style="color: rgb(0, 0, 0) !important;">Web development</h4>
 
                 <p class="service-item-text">
                   Development of sites at the starter level.
@@ -275,11 +274,11 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-app.svg" style="filter: brightness(0) saturate(100%) invert(16%) sepia(88%) saturate(3662%) hue-rotate(296deg) brightness(88%) contrast(98%);" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Technical skill</h4>
+                <h4 class="h4 service-item-title" style="color: rgb(0, 0, 0) !important;">Technical skill</h4>
 
                 <p class="service-item-text">
                   Also got a lot knowledge in hardware computer,fixable or problemsolving.
@@ -315,18 +314,18 @@
 
         <section class="testimonials default">
 
-          <h3 class="h3 testimonials-title default">Testimonials</h3>
+          <h3 class="h3 testimonials-title">Testimonials</h3>
 
           <ul class="testimonials-list has-scrollbar">
 
-            <li class="testimonials-item default">
+            <li class="testimonials-ite">
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
                   <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
+                <h4 class="h4 testimonials-item-title" style="color: rgb(0, 0, 0) !important;" data-testimonials-title>Daniel lewis</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -341,16 +340,16 @@
               </div>
             </li>
 
-            <li class="testimonials-item default">
+            <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
                   <img src="./assets/images/avatar-2.png" alt="Jessica miller" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Jessica miller</h4>
+                <h4 class="h4 testimonials-item-title" style="color: rgb(0, 0, 0) !important;" data-testimonials-title>Jessica miller</h4>
 
-                <div class="testimonials-text default" data-testimonials-text>
+                <div class="testimonials-text" data-testimonials-text>
                   <p>
                     Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
@@ -463,7 +462,7 @@
 
         <section class="clients default">
 
-          <h3 class="h3 clients-title">My Web & Program Langauges</h3>
+          <h3 class="h3 clients-title default">My Web & Program Langauges</h3>
 
           <ul class="clients-list has-scrollbar">
 
@@ -515,7 +514,7 @@
 
         <section class="clients">
 
-          <h3 class="h3 clients-title">My Tools</h3>
+          <h3 class="h3 clients-title default">My Tools</h3>
 
           <ul class="clients-list has-scrollbar">
 
@@ -605,31 +604,31 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="resume">
+      <article class="resume default" data-page="resume">
 
         <header>
-          <h2 class="h2 article-title">Resume</h2>
+          <h2 class="h2 article-title default">Resume</h2>
         </header>
 
-        <section class="timeline">
+        <section class="timeline default">
 
-          <div class="title-wrapper">
+          <div class="title-wrapper default">
             <div class="icon-box">
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Education</h3>
+            <h3 class="h3 default">Education</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Strisuksa  School Roiet</h4>
+              <h4 class="h4 timeline-item-title default">Strisuksa  School Roiet</h4>
 
               <span>2016 — 2022</span>
 
-              <p class="timeline-text">
+              <p class="timeline-text default">
                 My high school GPAX:3.2
               </p>
 
@@ -637,11 +636,11 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">B.i.S : Bachelor of Information Science</h4>
+              <h4 class="h4 timeline-item-title default">B.i.S : Bachelor of Information Science</h4>
 
               <span>2022 — Present</span>
 
-              <p class="timeline-text">
+              <p class="timeline-text default">
                Faculty of Humanities and Social Sciences Khon Kaen University 
                GPAX:2.89
               </p>
@@ -654,37 +653,37 @@
 
         </section>
 
-        <section class="timeline">
+        <section class="timeline default">
 
-          <div class="title-wrapper">
+          <div class="title-wrapper default">
             <div class="icon-box">
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Experience</h3>
+            <h3 class="h3 default">Experience</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Mobilib, iSchool KKU</h4>
+              <h4 class="h4 timeline-item-title default">Mobilib, iSchool KKU</h4>
 
               <span>2022 — 2024</span>
 
-              <p class="timeline-text">
+              <p class="timeline-text default">
                 Be a part of mobilib member who has contributed to the achievements and reputation of Mobilib.
               </p>
 
             </li>
 
-            <li class="timeline-item">
+            <li class="timeline-item default">
 
-              <h4 class="h4 timeline-item-title">Full stack developer</h4>
+              <h4 class="h4 timeline-item-title default">Full stack developer</h4>
 
               <span>2024 — Present</span>
 
-              <p class="timeline-text">
+              <p class="timeline-text default">
                 making KKU Stock Photos Web Application for KKU users and everyone who want to achives a picture from KKU.
               </p>
 
@@ -717,7 +716,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
+                <h5 class="h5" >Web design</h5>
                 <data value="80">80%</data>
               </div>
 
@@ -780,35 +779,35 @@
         - #PORTFOLIO
       -->
 
-      <article class="experience" data-page="experience">
+      <article class="experience default" data-page="experience">
 
         <header>
-          <h2 class="h2 article-title">experience</h2>
+          <h2 class="h2 article-title default">experience</h2>
         </header>
 
         <section class="projects">
 
-          <ul class="filter-list">
+          <ul class="filter-list default">
 
-            <li class="filter-item">
-              <button class="active" data-filter-btn>All</button>
+            <li class="filter-item default">
+              <button class="active default" data-filter-btn>All</button>
             </li>
 
-            <li class="filter-item">
+            <li class="filter-item default">
               <button data-filter-btn>Web design</button>
             </li>
 
-            <li class="filter-item">
+            <li class="filter-item default">
               <button data-filter-btn>Program</button>
             </li>
 
-            <li class="filter-item">
+            <li class="filter-item default">
               <button data-filter-btn>Web development</button>
             </li>
 
           </ul>
 
-          <div class="filter-select-box">
+          <div class="filter-select-box ">
 
             <button class="filter-select" data-select>
 
@@ -822,19 +821,19 @@
 
             <ul class="select-list">
 
-              <li class="select-item">
+              <li class="select-item default">
                 <button data-select-item>All</button>
               </li>
 
-              <li class="select-item">
-                <button data-select-item>Web design</button>
+              <li class="select-item default">
+                <button data-select-item >Web design</button>
               </li>
 
-              <li class="select-item">
+              <li class="select-item default">
                 <button data-select-item>Program</button>
               </li>
 
-              <li class="select-item">
+              <li class="select-item default">
                 <button data-select-item>Web development</button>
               </li>
 
@@ -888,7 +887,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/ไฟล์รูปภาพProject/MJposter_page-0001.jpg" alt="fundo" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">MJ Petshop</h3>
@@ -906,7 +905,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/ไฟล์รูปภาพProject/DataPython_page-0001.jpg" alt="brawlhalla" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Cocoamore Reserv</h3>
@@ -924,7 +923,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/ไฟล์รูปภาพProject/movie wepick.PNG" alt="dsm." loading="lazy">
                 </figure>
 
                 <h3 class="project-title">MovieWePick</h3>
@@ -942,7 +941,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/ไฟล์รูปภาพProject/salon80website.pdf" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/ไฟล์รูปภาพProject/salon80website_page-0001.jpg" alt="metaspark" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">80Salon</h3>
@@ -960,7 +959,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/ไฟล์รูปภาพProject/Datacocoamorewebposter.pdf" alt="summary" loading="lazy">
+                  <img src="./assets/images/ไฟล์รูปภาพProject/Datacocoamorewebposter_page-0001.jpg" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Cocoamore</h3>
@@ -1142,7 +1141,7 @@
               </a>
             </li>
 
-            <!-- <!-- <li class="blog-post-item">
+            <!-- <li class="blog-post-item">
               <a href="#">
 
                 <figure class="blog-banner-box">
