--- a/index.html
+++ b/index.html
@@ -1262,11 +1262,16 @@
   <div class="modal-project mj-project">
     <button class="modal-close-btn" onclick="closemodal()">X</button>
     <div class="modal-content">
-      <h2>Project Title</h2>
-      <p>คำนำ รายวิชา  วัตถุประสงค์ ผลที่ได้ </p>
+      <h2>MJ Petshop</h2>
+      <p>There are many categories of products in the store, whether it be product type, brand, or type of product. Such a problem As a result, customers do not know whether the products they want are available or not. </p>
+        <br>
+         <h3>Objective</h3>
+         <p>To manage product information within the store of the MJ petshop establishment.</p>
+         <br>
+         <h3>Advisor</h3> <p>Dr.Suwannee Hoaihongthong </p>
     </div>
     <div class="modal-context">
-      <strong>Programing</strong> ภาษาที่พัฒนา รายละเอียดภาษา
+      <strong>Programing</strong> HTML,PHP,javascript
     </div>
   </div>
 
@@ -1274,11 +1279,22 @@
   <div class="modal-project python-project">
     <button class="modal-close-btn python-closebtn" onclick="closemodalpython()">X</button>
     <div class="modal-content python-content">
-      <h2>Project Title</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at magna sit amet purus vehicula facilisis.</p>
+      <h2>Cocoamore Reserv (Python)</h2>
+      <p>CoCoa More is a dessert cafe that is popular among students at Khon Kaen University. which each day has
+        Many customers go to use the service. causing some customers who want to use the service There is not enough space for using the service,
+        But in terms of reserving tables and chairs in advance It is still only a system maintained through a Facebook page and telephone number.
+        Contact the shop The administrator is the owner of the establishment alone,Therefore, the organizers were aware of this problem and therefore included
+        Ideas for developing a reservation system To make it more convenient for customers to reserve tables. without having to call and ask directly and so that 
+        other employees can have thorough access to customer booking information within the system including information
+        This part can be used to develop the business and systems within the store in the future.</p>
+        <br>
+         <h3>Objective</h3>
+         <p>the system can manage customer booking information such as adding, deleting, and editing booking information and the system can record revenue from customer service per booking, which is a deposit.</p>
+         <br>
+         <h3>Advisor</h3> <p>Dr.Sompejch Junlabuddee </p>
     </div>
     <div class="modal-context python">
-      <strong>Details:</strong> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, adipisci?
+      <strong>Programing</strong> Python,PHP
     </div>
   </div>
 
@@ -1286,7 +1302,7 @@
   <div class="modal-project python-project">
     <button class="modal-close-btn python-closebtn" onclick="closemodalwebcoco()">X</button>
     <div class="modal-content python-content">
-      <h2>Project Title</h2>
+      <h2>Cocoamore</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at magna sit amet purus vehicula facilisis.</p>
     </div>
     <div class="modal-context python">
