update second times today

--- a/index.html
+++ b/index.html
@@ -1314,11 +1314,19 @@
   <div class="modal-project salon-project">
     <button class="modal-close-btn salon-closebtn" onclick="closemodalsalon()">X</button>
     <div class="modal-content salon-content">
-      <h2>80salon</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse at magna sit amet purus vehicula facilisis.</p>
+      <h2>80 Salon</h2>
+      <p>
+        This project is part of the project to integrate knowledge and practice (Capstone Project), 
+        which was created to develop knowledge, abilities, and work skills. According to the guidelines of the Bachelor of Information Science program
+        In addition, the project also aims to provide students with skills in using various tools related to system analysis and design, such as creating process flow diagrams and creating data models (Data Models).</p>
+        <br>
+         <h3>Objective</h3>
+         <p>System Analysis and Design has the goal of enabling students to understand and apply the principles of system analysis in a systematic, orderly manner and with a clear plan.</p>
+         <br>
+         <h3>Advisor</h3> <p>Dr.Sompejch Junlabuddee</p>
     </div>
-    <div class="modal-context salon">
-      <strong>Details:</strong> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, adipisci?
+    <div class="modal-context movie">
+      <strong>Programing</strong> Python,PHP,Css
     </div>
   </div>
 
@@ -1327,11 +1335,10 @@
     <button class="modal-close-btn movie-closebtn" onclick="closemodalmovie()">X</button>
     <div class="modal-content movie-content">
       <h2>MovieWePick</h2>
-      <p>Provide information about movies such as synopsis details, actors, directors, and release dates. Including ratings or reviews from viewers and critics. and use it as a marketing channel
-         for promoting new movies By sharing movie trailers (Trailer), posters, and behind-the-scenes footage.</p>
+      <p>Provide information about movies such as synopsis details, actors, directors, and release dates. Including ratings or reviews from viewers and critics. and use it as a marketing channel</p>
         <br>
          <h3>Objective</h3>
-         <p></p>
+         <p>for promoting new movies By sharing movie trailers (Trailer), posters, and behind-the-scenes footage.</p>
          <br>
          <h3>Advisor</h3> <p>Dr.juthatip chaikhambung</p>
     </div>
