--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
                 <h3 class="project-title">
                   MJ Petshop
                     <a class="git" href="./assets/pdf/MJ Pet Shop Khonkaen.pdf" download>PDF</a> 
-                    <a class="git" href="Github">Git</a>
+                    <a class="git" href="https://github.com/tortor1011/Mjpetshop" target="_blank">Git</a>
                 </h3>
 
                 <p class="project-category">Web design</p>
@@ -947,7 +947,7 @@
                 <h3 class="project-title">
                   Cocoamore Reserv
                     <a class="git" href="./assets/pdf/Coco Reserv_pdf.pdf" download>PDF</a> 
-                    <a class="git" href="Github">Git</a>
+                    <a class="git" href="https://github.com/tortor1011/cocoamorepython" target="_blank">Git</a>
                 </h3>
 
                 <p class="project-category">Program</p>
@@ -970,7 +970,7 @@
                 <h3 class="project-title">
                   Cocoamore 
                   <a class="git" href="./assets/pdf/ระบบฐานข้อมูลการขายสินค้าของสถานประกอบการ-Cocoa-More.pdf" download>PDF</a> 
-                  <a class="git" href="Github">Git</a>
+                  <a class="git" href="https://github.com/tortor1011/cocoamorewebsite" target="_blank">Git</a>
               </h3>
               
                 <p class="project-category">Web development</p>
@@ -995,7 +995,6 @@
               <h3 class="project-title">
                 80Salon
                   <a class="git" href="./assets/pdf/DA Capstone Project _ 80 SALON (2).pdf" download>PDF</a> 
-                  <a class="git" href="Github">Git</a>
               </h3>
 
                 <p class="project-category">Web design</p>
