--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/ไฟล์รูปภาพProject/logo.ico" type="image/x-icon">
 
   <!--
     - custom css link
