--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/25819-sompejch-junlabuddee.jpg" style="border-radius: 10px;" alt="Daniel lewis" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Dr.Sompejch Junlabuddee</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -345,7 +345,7 @@
               </div>
             </li>
 
-            <li class="testimonials-item">
+            <!-- <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
@@ -365,9 +365,9 @@
                 </div>
 
               </div>
-            </li>
+            </li> -->
 
-            <li class="testimonials-item">
+            <!-- <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
@@ -387,9 +387,9 @@
                 </div>
 
               </div>
-            </li>
+            </li> -->
 
-            <li class="testimonials-item">
+            <!-- <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
@@ -409,7 +409,7 @@
                 </div>
 
               </div>
-            </li>
+            </li> -->
 
           </ul>
 
@@ -432,7 +432,7 @@
 
             <div class="modal-img-wrapper">
               <figure class="modal-avatar-box">
-                <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="80" data-modal-img>
+                <img src="./assets/images/25819-sompejch-junlabuddee.jpg" style="border-radius: 10px;" alt="Daniel lewis" width="80" data-modal-img>
               </figure>
 
               <img src="./assets/images/icon-quote.svg" alt="quote icon">
