--- a/index.html
+++ b/index.html
@@ -676,15 +676,17 @@
 
               <h4 class="h4 timeline-item-title default">Full stack developer</h4>
 
-              <span>2024 — Present</span>
+              <span>2022 — Present</span>
 
               <p class="timeline-text default">
-                making KKU Stock Photos Web Application for KKU users and everyone who want to achives a picture from KKU.
-              </p>
-              <span>2024</span>
+                KKU STOCK PHOTO (Under developement) (Huge project For Khonkaen University)<br>
+                making KKU Stock Photos Web Application for KKU users and everyone who want to achives a pictures from KKU.
+              </p><br>
+              <span>Cocoamore Website</span>
+              Development website for Cocoamore cafeteria about digital management.<br>
               <p class="timeline-text default">
-               Development website for Cocoamore cafeteria about digital management.
-               <span>2024</span>
+               <br>
+               <span>Mj petshop Website</span>
                <p class="timeline-text default">Development website for pet shop manage product information.</p>
               </p>
             </li>
@@ -709,12 +711,12 @@
 
               <p class="timeline-text default">
                 Be a part of mobilib member who has contributed to the achievements and reputation of Mobilib.
-              </p>
-              <span>2024</span>
+              </p> <br>
+              <span>iTalk2024</span>
               <p class="timeline-text default">
                 iTalk6-Operation Team,Responsible for controlling the sound room and controlling video.
-              </p>
-              <span>2023</span>
+              </p><br>
+              <span>Kickoff 2023 "Writing your own journey"</span>
               <p class="timeline-text default">
                 iSchool Kickoff 2023(Writing your own journey)-Operation Team Procure and inspect equipment for the location.
               </p>
@@ -1243,7 +1245,7 @@
                   <h3 class="h3 blog-item-title">KKU STOCK PHOTO</h3>
 
                   <p class="blog-text">
-                    Website that allowed everyone reach all the photo from KKU (Huge Project).
+                    Website that allowed everyone reach all the photos from KKU (Huge Project).
                   </p>
 
                 </div>
