--- a/index.html
+++ b/index.html
@@ -1273,17 +1273,17 @@
 
        
 
-          <ul class="project-list">
+          <ul class="project-list certi">
 
             <li class="project-item  active" data-filter-item data-category="web design"> 
-              <a href="./assets/images/Certificate/Operating_Systems.png"target="_blank">
+              <a href="./assets/images/Certificate/Operating_Systems.png" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Certificate/Operating_Systems.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/Certificate/Operating_Systems.png" style="width: 100% !important; height: 100% !important;" alt="dsm." loading="lazy">
                 </figure>
 
 
@@ -1300,7 +1300,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Certificate/AI-for-All-From-Basics-to-GenAI-Practice_AI-for-All-From-Basics-to-GenAI-Practice-Course-Completion-.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/Certificate/AI-for-All-From-Basics-to-GenAI-Practice_AI-for-All-From-Basics-to-GenAI-Practice-Course-Completion-.png" style="width: 100% !important; height: 100% !important;" alt="dsm." loading="lazy">
                 </figure>
 
 
@@ -1315,7 +1315,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Certificate/a02d3b300a12463286ffac3d4221c4aeYQVhMTWcRQGrwc7n-5.png" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/Certificate/a02d3b300a12463286ffac3d4221c4aeYQVhMTWcRQGrwc7n-5.png" style="width: 100% !important; height: 100% !important;" alt="metaspark" loading="lazy">
                 </figure>
 
 
@@ -1331,7 +1331,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Certificate/394800ce23dd437d97439ef6212d6770wyfjwLhI96fsRJxj-0.png"alt="summary" loading="lazy">
+                  <img src="./assets/images/Certificate/394800ce23dd437d97439ef6212d6770wyfjwLhI96fsRJxj-0.png" style="width: 100% !important; height: 100% !important;"alt="summary" loading="lazy">
                 </figure>
 
               </a>
