--- a/index.html
+++ b/index.html
@@ -220,12 +220,12 @@
 
         <section class="about-text default">
           <p>
-            Hi! I'm Tor from Khonkaen University,I'm looking for Developer job (Internship,Traineeship).
+            Hi! I'm Tor from Khonkaen University, I'm looking for Developer job (Internship,Traineeship).
             
           </p>
 
           <p>
-            I enjoy turning complex problems into simple, beautiful and intuitive designs,I have the ability to design and develop websites, create web Program, design and manage databases from Khon Kaen University, and I am currently pursuing further studies at the Khonkaen University.
+            I enjoy turning complex problems into simple, beautiful and intuitive designs, I have the ability to design and develop websites, create web Program, design and manage databases from Khon Kaen University, and I am currently pursuing further studies at the Khonkaen University.
 
             <p>Over the years, I have been dedicated to improving my skills in Development and have gained experience from various projects assigned by my university.</p>
 
@@ -286,7 +286,7 @@
                 <h4 class="h4 service-item-title" style="color: rgb(0, 0, 0) !important;">Technical skill</h4>
 
                 <p class="service-item-text">
-                  Also got a lot knowledge in hardware computer,fixable or problemsolving.
+                  Also got a lot knowledge in hardware computer, fixable or problemsolving.
                 </p>
               </div>
 
@@ -302,7 +302,7 @@
                 <h4 class="h4 service-item-title">Langauges</h4>
 
                 <p class="service-item-text">
-                  Communication english in Intermediate level understand most frequent,general words,(Learning from International program in school).
+                  Communication english in Intermediate level understand most frequent, general words (Learning from International program in school).
                 </p>
               </div>
 
@@ -434,8 +434,8 @@
 
               <img src="./assets/images/icon-quote.svg" alt="quote icon">
               <p class="tel">
-                Email:jsompe@kku.ac.th
-                Tel:094-787-4329
+                Email: jsompet@kku.ac.th
+                Tel: 094-787-4329
               </p>
             </div>
 
